	* word 6 had to have a seperate BX and fkp and so on for itself, but
	now i believe fullsaved word6 files are as supported as word97 files.
	* can extract raw text of fastsaved word 6 files..
	* and now we can get the para properties of word 6 fast saved files 
	(i think)
	* basically brought fastsaved up to fullsave quality, though im not 100
	happy with them.
ALL TODO
	* add char properties
	* give abiword folk new alpha filter code for themselves to play with.

	* modify configure script so its possible to link against a different expat
	lib, or to disable it or something.
	* add errors via numbered errors to wvInitParser.

	* harden wvConfig against bad pointers, and incomplete sections e.g justification
	* make wvConvert read config from commandline, and 
	* additional code checks for conversion of codepage whatever to iso for
	ancillary strings that might be stored in that format.
	* modify complex code to stop at end of main text
	* do sep and anlv

	* i have Plcfbte's marked as generic empty structures in the old code, which 
	is technically incorrect but works the way i've set up the code to handle it.
	* now that the stylesheet is in position, we should look at the simple
	text handling and get that right for text only.
	* scan sprm carefully for problems with pointer offset and pos mistakes
	* wvToggle is wrong im sure.
	* i should create a lex headerfile to Init,Copy,Read from File, and Read
	from Bucket, so as to retain my sanity.
	* convert stylesheet to correct stylesheet.
	* convert chp to CHP.
	* convert pap to PAP.
	* the old ffffffff list problem still exists with the new interface, i must 
	finally kill that issue once and for all
	* colspan support, find the smallest common unit, and restart the
	table handling.
	* rowspan support
	* add a fudge factor to the gcf part so as to fudge out insignificent
	twip differences

	4 table rowspan/colspan support

	* use twips from config file throughout mswordview
	I want...